sudha/src/objects/Full_Calendar_Filter__c.object
<CustomObject>
    <description>Simple rules for controlling the records that appear on a full calendar</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this filter active?</description>
        <inlineHelpText>Is this filter active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_ID__c</fullName>
        <description>The API name of the field on the source object this filter will evaluate</description>
        <inlineHelpText>The API name of the field on the source object this filter will evaluate</inlineHelpText>
        <label>Field ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Calendar__c</fullName>
        <description>What calendar is this filter related to?</description>
        <inlineHelpText>What calendar is this filter related to?</inlineHelpText>
        <label>Full Calendar</label>
        <referenceTo>Full_Calendar__c</referenceTo>
        <relationshipLabel>Full Calendar Filters</relationshipLabel>
        <relationshipName>Full_Calendar_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Logical__c</fullName>
        <description>What is the rule for this filter?</description>
        <inlineHelpText>What is the rule for this filter?</inlineHelpText>
        <label>Logical</label>
        <picklist>
            <picklistValues>
                <fullName>Equal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Does not Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not Contain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>What is the value that this logical condition must evaluate on the field?</description>
        <inlineHelpText>What is the value that this logical condition must evaluate on the field?</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Full Calendar Filter</label>
    <nameField>
        <displayFormat>FCF-{00000}</displayFormat>
        <label>Full Calendar Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Full Calendar Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>